// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files 1`] = `
Array [
  "account-insert-request.form-group-fac.ts",
  "account-insert-request.form.ts",
  "account-insert-request.model.ts",
  "account-insert-request.properties.ts",
  "account-insert-request.test-obj-fac.ts",
  "account-update-request.form-group-fac.ts",
  "account-update-request.form.ts",
  "account-update-request.model.ts",
  "account-update-request.properties.ts",
  "account-update-request.test-obj-fac.ts",
  "account.form-group-fac.ts",
  "account.form.ts",
  "account.model.ts",
  "account.properties.ts",
  "account.test-obj-fac.ts",
  "contact-insert-request.form-group-fac.ts",
  "contact-insert-request.form.ts",
  "contact-insert-request.model.ts",
  "contact-insert-request.properties.ts",
  "contact-insert-request.test-obj-fac.ts",
  "contact-update-request.form-group-fac.ts",
  "contact-update-request.form.ts",
  "contact-update-request.model.ts",
  "contact-update-request.properties.ts",
  "contact-update-request.test-obj-fac.ts",
  "contact.form-group-fac.ts",
  "contact.form.ts",
  "contact.model.ts",
  "contact.properties.ts",
  "contact.test-obj-fac.ts",
  "endpoints.ts",
  "index.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form';

export interface IAccountForm {
    id: FormControl<string | null>;
    refId: FormControl<string | null>;
    name: FormControl<string | null>;
    parentAccountId: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    emailInvoice: FormControl<boolean | null>;
    tenantId: FormControl<string | null>;
    contactCount: FormControl<number | null>;
    parentAccount: FormGroup<IAccountForm | null>;
    contacts: FormArray<FormGroup<IContactForm>>;
    childAccounts: FormArray<FormGroup<IAccountForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IAccountForm } from './account.form';
import { IContactForm } from './contact.form';

export function AccountFormGroupFac(): FormGroup<IAccountForm> {
  return new FormGroup<IAccountForm>({
    id: new FormControl<string | null>(null),
    refId: new FormControl<string | null>(null),
    name: new FormControl<string | null>(null),
    parentAccountId: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    emailInvoice: new FormControl<boolean | null>(null),
    tenantId: new FormControl<string | null>(null),
    contactCount: new FormControl<number | null>(null, { validators: Validators.compose([Validators.min(1), Validators.max(99999)]) }),
    parentAccount: new FormGroup<IAccountForm | null>(AccountFormGroupFac().controls),
    contacts: new FormArray<FormGroup<IContactForm>>([], { validators: Validators.compose([Validators.minLength(1), Validators.maxLength(3)]) }),
    childAccounts: new FormArray<FormGroup<IAccountForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

/**
 * Customer Account
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccount {
  id?: string | null;
  refId?: string | null;
  name?: string | null;
  parentAccountId?: string | null;
  isEnabled?: boolean | null;
  emailInvoice?: boolean | null;
  tenantId?: string | null;
  contactCount?: number | null;
  parentAccount?: Partial<IAccount> | null;
  contacts?: Partial<IContact[]> | null;
  childAccounts?: Partial<IAccount[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
/**
 * Customer Account
 */
export enum AccountProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  TENANT_ID = 'tenantId',
  CONTACT_COUNT = 'contactCount',
  PARENT_ACCOUNT = 'parentAccount',
  CONTACTS = 'contacts',
  CHILD_ACCOUNTS = 'childAccounts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestContact } from './contact.test-obj-fac';
import { IAccount } from './account.model';
import { AccountProperties } from './account.properties';

export function createTestAccount(): Partial<IAccount> {
    return { 
      [AccountProperties.ID]: 'ID',
      [AccountProperties.REF_ID]: 'REF_ID',
      [AccountProperties.NAME]: 'NAME',
      [AccountProperties.PARENT_ACCOUNT_ID]: 'PARENT_ACCOUNT_ID',
      [AccountProperties.IS_ENABLED]: false,
      [AccountProperties.EMAIL_INVOICE]: false,
      [AccountProperties.TENANT_ID]: 'TENANT_ID',
      [AccountProperties.CONTACT_COUNT]: 0, 
      [AccountProperties.PARENT_ACCOUNT]: null,
      [AccountProperties.CONTACTS]: [createTestContact()],
      [AccountProperties.CHILD_ACCOUNTS]: [],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form';

export interface IAccountInsertRequestForm {
    id: FormControl<string | null>;
    refId: FormControl<string | null>;
    name: FormControl<string>;
    parentAccountId: FormControl<string | null>;
    emailInvoice: FormControl<boolean | null>;
    contacts: FormArray<FormGroup<IContactForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IAccountInsertRequestForm } from './account-insert-request.form';
import { IContactForm } from './contact.form';

export function AccountInsertRequestFormGroupFac(): FormGroup<IAccountInsertRequestForm> {
  return new FormGroup<IAccountInsertRequestForm>({
    id: new FormControl<string | null>(null),
    refId: new FormControl<string | null>(null),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    parentAccountId: new FormControl<string | null>(null),
    emailInvoice: new FormControl<boolean | null>(null),
    contacts: new FormArray<FormGroup<IContactForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccountInsertRequest {
  id?: string | null;
  refId?: string | null;
  name?: string;
  parentAccountId?: string | null;
  emailInvoice?: boolean | null;
  contacts?: Partial<IContact[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountInsertRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-insert-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestContact } from './contact.test-obj-fac';
import { IAccountInsertRequest } from './account-insert-request.model';
import { AccountInsertRequestProperties } from './account-insert-request.properties';

export function createTestAccountInsertRequest(): Partial<IAccountInsertRequest> {
    return { 
      [AccountInsertRequestProperties.ID]: 'ID',
      [AccountInsertRequestProperties.REF_ID]: 'REF_ID',
      [AccountInsertRequestProperties.NAME]: 'NAME',
      [AccountInsertRequestProperties.PARENT_ACCOUNT_ID]: 'PARENT_ACCOUNT_ID',
      [AccountInsertRequestProperties.EMAIL_INVOICE]: false, 
      [AccountInsertRequestProperties.CONTACTS]: [createTestContact()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form';

export interface IAccountUpdateRequestForm {
    id: FormControl<string | null>;
    refId: FormControl<string>;
    name: FormControl<string>;
    parentAccountId: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    emailInvoice: FormControl<boolean | null>;
    contacts: FormArray<FormGroup<IContactForm>>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IAccountUpdateRequestForm } from './account-update-request.form';
import { IContactForm } from './contact.form';

export function AccountUpdateRequestFormGroupFac(): FormGroup<IAccountUpdateRequestForm> {
  return new FormGroup<IAccountUpdateRequestForm>({
    id: new FormControl<string | null>(null),
    refId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    parentAccountId: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    emailInvoice: new FormControl<boolean | null>(null),
    contacts: new FormArray<FormGroup<IContactForm>>([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContact } from './contact.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IAccountUpdateRequest {
  id?: string | null;
  refId?: string;
  name?: string;
  parentAccountId?: string | null;
  isEnabled?: boolean | null;
  emailInvoice?: boolean | null;
  contacts?: Partial<IContact[]> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum AccountUpdateRequestProperties {
  ID = 'id',
  REF_ID = 'refId',
  NAME = 'name',
  PARENT_ACCOUNT_ID = 'parentAccountId',
  IS_ENABLED = 'isEnabled',
  EMAIL_INVOICE = 'emailInvoice',
  CONTACTS = 'contacts',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: account-update-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestContact } from './contact.test-obj-fac';
import { IAccountUpdateRequest } from './account-update-request.model';
import { AccountUpdateRequestProperties } from './account-update-request.properties';

export function createTestAccountUpdateRequest(): Partial<IAccountUpdateRequest> {
    return { 
      [AccountUpdateRequestProperties.ID]: 'ID',
      [AccountUpdateRequestProperties.REF_ID]: 'REF_ID',
      [AccountUpdateRequestProperties.NAME]: 'NAME',
      [AccountUpdateRequestProperties.PARENT_ACCOUNT_ID]: 'PARENT_ACCOUNT_ID',
      [AccountUpdateRequestProperties.IS_ENABLED]: false,
      [AccountUpdateRequestProperties.EMAIL_INVOICE]: false, 
      [AccountUpdateRequestProperties.CONTACTS]: [createTestContact()],
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR
import { IAccountForm } from './account.form';

export interface IContactForm {
    id: FormControl<string | null>;
    isEnabled: FormControl<boolean | null>;
    contactTypeId: FormControl<string>;
    accountId: FormControl<string>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null>;
    addressLine1: FormControl<string>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string>;
    state: FormControl<string>;
    zip: FormControl<string>;
    emails: FormControl<string | null>;
    phone1: FormControl<string | null>;
    phone2: FormControl<string | null>;
    account: FormGroup<IAccountForm | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IContactForm } from './contact.form';
import { IAccountForm } from './account.form';
import { AccountFormGroupFac } from './account.form-group-fac';

export function ContactFormGroupFac(): FormGroup<IContactForm> {
  return new FormGroup<IContactForm>({
    id: new FormControl<string | null>(null),
    isEnabled: new FormControl<boolean | null>(null),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null, { validators: Validators.maxLength(5) } ),
    addressLine1: new FormControl<string>('', { validators: Validators.compose([Validators.required, Validators.minLength(50)]), nonNullable: true }),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(null),
    phone1: new FormControl<string | null>(null, { validators: Validators.compose([Validators.minLength(13), Validators.maxLength(14), Validators.pattern('^(d{3}) ?d{3}-d{4}$')]) }),
    phone2: new FormControl<string | null>(null, { validators: Validators.compose([Validators.minLength(13), Validators.maxLength(14), Validators.pattern('^(d{3}) ?d{3}-d{4}$')]) }),
    account: new FormGroup<IAccountForm | null>(AccountFormGroupFac().controls),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IAccount } from './account.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContact {
/**
 * Unique Identifier
 */
  id?: string | null;
  isEnabled?: boolean | null;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string | null;
  addressLine1?: string;
  addressLine2?: string | null;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string | null;
  phone1?: string | null;
  phone2?: string | null;
  account?: Partial<IAccount> | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactProperties {
/**
 * Unique Identifier
 */
  ID = 'id',
  IS_ENABLED = 'isEnabled',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
  ACCOUNT = 'account',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { createTestAccount } from './account.test-obj-fac';
import { IContact } from './contact.model';
import { ContactProperties } from './contact.properties';

export function createTestContact(): Partial<IContact> {
    return { 
      [ContactProperties.ID]: 'ID',
      [ContactProperties.IS_ENABLED]: false,
      [ContactProperties.CONTACT_TYPE_ID]: 'CONTACT_TYPE_ID',
      [ContactProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [ContactProperties.FIRST_NAME]: 'FIRST_NAME',
      [ContactProperties.LAST_NAME]: 'LAST_NAME',
      [ContactProperties.MIDDLE_NAME]: 'MIDDL',
      [ContactProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [ContactProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [ContactProperties.CITY]: 'CITY',
      [ContactProperties.STATE]: 'STATE',
      [ContactProperties.ZIP]: 'ZIP',
      [ContactProperties.EMAILS]: 'EMAILS',
      [ContactProperties.PHONE_1]: 'PHONE_1',
      [ContactProperties.PHONE_2]: 'PHONE_2', 
      [ContactProperties.ACCOUNT]: createTestAccount(),
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IContactInsertRequestForm {
    id: FormControl<string | null>;
    contactTypeId: FormControl<string>;
    accountId: FormControl<string>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null>;
    addressLine1: FormControl<string>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string>;
    state: FormControl<string>;
    zip: FormControl<string>;
    emails: FormControl<string | null>;
    phone1: FormControl<string | null>;
    phone2: FormControl<string | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IContactInsertRequestForm } from './contact-insert-request.form';

export function ContactInsertRequestFormGroupFac(): FormGroup<IContactInsertRequestForm> {
  return new FormGroup<IContactInsertRequestForm>({
    id: new FormControl<string | null>(null),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(null),
    phone1: new FormControl<string | null>(null),
    phone2: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactInsertRequest {
  id?: string | null;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string | null;
  addressLine1?: string;
  addressLine2?: string | null;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string | null;
  phone1?: string | null;
  phone2?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactInsertRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-insert-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContactInsertRequest } from './contact-insert-request.model';
import { ContactInsertRequestProperties } from './contact-insert-request.properties';

export function createTestContactInsertRequest(): Partial<IContactInsertRequest> {
    return { 
      [ContactInsertRequestProperties.ID]: 'ID',
      [ContactInsertRequestProperties.CONTACT_TYPE_ID]: 'CONTACT_TYPE_ID',
      [ContactInsertRequestProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [ContactInsertRequestProperties.FIRST_NAME]: 'FIRST_NAME',
      [ContactInsertRequestProperties.LAST_NAME]: 'LAST_NAME',
      [ContactInsertRequestProperties.MIDDLE_NAME]: 'MIDDLE_NAME',
      [ContactInsertRequestProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [ContactInsertRequestProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [ContactInsertRequestProperties.CITY]: 'CITY',
      [ContactInsertRequestProperties.STATE]: 'STATE',
      [ContactInsertRequestProperties.ZIP]: 'ZIP',
      [ContactInsertRequestProperties.EMAILS]: 'EMAILS',
      [ContactInsertRequestProperties.PHONE_1]: 'PHONE_1',
      [ContactInsertRequestProperties.PHONE_2]: 'PHONE_2', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IContactUpdateRequestForm {
    id: FormControl<string | null>;
    contactTypeId: FormControl<string>;
    accountId: FormControl<string>;
    firstName: FormControl<string>;
    lastName: FormControl<string>;
    middleName: FormControl<string | null>;
    addressLine1: FormControl<string>;
    addressLine2: FormControl<string | null>;
    city: FormControl<string>;
    state: FormControl<string>;
    zip: FormControl<string>;
    emails: FormControl<string | null>;
    phone1: FormControl<string | null>;
    phone2: FormControl<string | null>;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.form-group-fac.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IContactUpdateRequestForm } from './contact-update-request.form';

export function ContactUpdateRequestFormGroupFac(): FormGroup<IContactUpdateRequestForm> {
  return new FormGroup<IContactUpdateRequestForm>({
    id: new FormControl<string | null>(null),
    contactTypeId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    accountId: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    firstName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    lastName: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    middleName: new FormControl<string | null>(null),
    addressLine1: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine2: new FormControl<string | null>(null),
    city: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    state: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    zip: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    emails: new FormControl<string | null>(null),
    phone1: new FormControl<string | null>(null),
    phone2: new FormControl<string | null>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IContactUpdateRequest {
  id?: string | null;
  contactTypeId?: string;
  accountId?: string;
  firstName?: string;
  lastName?: string;
  middleName?: string | null;
  addressLine1?: string;
  addressLine2?: string | null;
  city?: string;
  state?: string;
  zip?: string;
  emails?: string | null;
  phone1?: string | null;
  phone2?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ContactUpdateRequestProperties {
  ID = 'id',
  CONTACT_TYPE_ID = 'contactTypeId',
  ACCOUNT_ID = 'accountId',
  FIRST_NAME = 'firstName',
  LAST_NAME = 'lastName',
  MIDDLE_NAME = 'middleName',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  EMAILS = 'emails',
  PHONE_1 = 'phone1',
  PHONE_2 = 'phone2',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: contact-update-request.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IContactUpdateRequest } from './contact-update-request.model';
import { ContactUpdateRequestProperties } from './contact-update-request.properties';

export function createTestContactUpdateRequest(): Partial<IContactUpdateRequest> {
    return { 
      [ContactUpdateRequestProperties.ID]: 'ID',
      [ContactUpdateRequestProperties.CONTACT_TYPE_ID]: 'CONTACT_TYPE_ID',
      [ContactUpdateRequestProperties.ACCOUNT_ID]: 'ACCOUNT_ID',
      [ContactUpdateRequestProperties.FIRST_NAME]: 'FIRST_NAME',
      [ContactUpdateRequestProperties.LAST_NAME]: 'LAST_NAME',
      [ContactUpdateRequestProperties.MIDDLE_NAME]: 'MIDDLE_NAME',
      [ContactUpdateRequestProperties.ADDRESS_LINE_1]: 'ADDRESS_LINE_1',
      [ContactUpdateRequestProperties.ADDRESS_LINE_2]: 'ADDRESS_LINE_2',
      [ContactUpdateRequestProperties.CITY]: 'CITY',
      [ContactUpdateRequestProperties.STATE]: 'STATE',
      [ContactUpdateRequestProperties.ZIP]: 'ZIP',
      [ContactUpdateRequestProperties.EMAILS]: 'EMAILS',
      [ContactUpdateRequestProperties.PHONE_1]: 'PHONE_1',
      [ContactUpdateRequestProperties.PHONE_2]: 'PHONE_2', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  accounts = '/api/v1/Accounts.{format}',
  contacts = '/api/v1/Contacts.{format}',
}
export interface IEndpoints {
  readonly accounts: string;
  readonly contacts: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './account-insert-request.form-group-fac';
export * from './account-insert-request.form';
export * from './account-insert-request.model';
export * from './account-insert-request.properties';
export * from './account-insert-request.test-obj-fac';
export * from './account-update-request.form-group-fac';
export * from './account-update-request.form';
export * from './account-update-request.model';
export * from './account-update-request.properties';
export * from './account-update-request.test-obj-fac';
export * from './account.form-group-fac';
export * from './account.form';
export * from './account.model';
export * from './account.properties';
export * from './account.test-obj-fac';
export * from './contact-insert-request.form-group-fac';
export * from './contact-insert-request.form';
export * from './contact-insert-request.model';
export * from './contact-insert-request.properties';
export * from './contact-insert-request.test-obj-fac';
export * from './contact-update-request.form-group-fac';
export * from './contact-update-request.form';
export * from './contact-update-request.model';
export * from './contact-update-request.properties';
export * from './contact-update-request.test-obj-fac';
export * from './contact.form-group-fac';
export * from './contact.form';
export * from './contact.model';
export * from './contact.properties';
export * from './contact.test-obj-fac';
"
`;
